--- a/PowerGridTesting.Rmd
+++ b/PowerGridTesting.Rmd
@@ -6,10 +6,9 @@ output: html_document
 ---
 
 ```{r}
+library(pum)
 library(dplyr)
 ```
-
-
 
 ```{r}
 test_results_01 <- 
@@ -41,128 +40,129 @@ View(test_results_01)
 
 
 ```{r}
-test_results_01_non_grid <-
-  pum::pump_power(design = c("d2.1_m2fr"),
-                  MTP = c("Holm", "BH"),
-                  MDES = c(0.125, 0.125, 0.125, 0.125, 0.125),
-                  M = 5,
-                  J = 20,
-                  K = 1,
-                  nbar = 100,
+test_results_01_non_grid_wide <-
+  pum::pump_power(design="d2.2_m2rc",
+                  MTP = c( "Holm", "Bonferroni" ),
+                  MDES = 0.41,
+                  M = 3, 
+                  alpha=0.05,
+                  ICC.2 = 0.2,  
+                  R2.1 = 0.7,
                   Tbar = 0.5,
-                  alpha = 0.05,
-                  numCovar.1 = 0,
-                  numCovar.2 = 0,
-                  numCovar.3 = 0,
-                  R2.1 = c(0.2, 0.2, 0.2, 0.2, 0.2),
-                  R2.2 = c(0.1, 0.1, 0.1, 0.1, 0.1),
-                  R2.3 = c(0, 0, 0, 0, 0),
-                  ICC.2 = c(0, 0, 0, 0, 0),
-                  ICC.3 = c(0, 0, 0, 0, 0),
-                  rho = 0.5,
-                  omega.2 = 0,
-                  omega.3 = 0.1,
-                  long.table = TRUE)
-
-
-
-```
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-```{r}
-test_results_02 <- 
-pum::pump_power_grid(design = c("d2.1_m2fr", "d2.1_m2ff"),
-                     MTP = c("Holm", "BH") ,
-                     MDES = c(0.125, 0.1, 0.2, 0.15, 0.175),
-                     M = 5 ,
-                     J = 20,
-                     K = 1,
-                     nbar = 100,
-                     Tbar = 0.5 ,
-                     alpha = 0.05,
-                     numCovar.1 = 0,
-                     numCovar.2 = 0,
-                     numCovar.3 = 0,
-                     R2.1 = c(0.2, 0.2, 0.2, 0.2, 0.2),
-                     R2.2 = NULL,
-                     R2.3 = NULL,
-                     ICC.2 =0,
-                     ICC.3 = NULL,
-                     rho = 0.5,
-                     omega.2 = NULL,
-                     omega.3 = NULL)
+                  numCovar.1 = 5,
+                  nbar = 4, 
+                  J = 50, 
+                  rho = 0, 
+                  long.table = FALSE )
 ```
 
 ```{r}
-test_results_03 <- 
-pum::pump_power_grid(design = c("d2.1_m2fr"),
-                     MTP = c("Holm", "BH") ,
-                     MDES = c(0.125),
-                     M = 5 ,
-                     J = 20,
-                     K = 1,
-                     nbar = 100,
-                     Tbar = 0.5 ,
-                     alpha = 0.05,
-                     numCovar.1 = 0,
-                     numCovar.2 = 0,
-                     numCovar.3 = 0,
-                     R2.1 = c(0.2, 0.2, 0.2, 0.2, 0.2),
-                     R2.2 = NULL,
-                     R2.3 = NULL,
-                     ICC.2 =0,
-                     ICC.3 = NULL,
-                     rho = 0.5,
-                     omega.2 = NULL,
-                     omega.3 = NULL)
+View(test_results_01_non_grid_wide)
 ```
 
 ```{r}
-View(test_results_03)
+test_results_01_non_grid_long <-
+  pump_power(design="d2.2_m2rc",
+             MTP = c( "Holm", "Bonferroni" ),
+             MDES = 0.41,
+             M = 3, 
+             alpha=0.05,
+             ICC.2 = 0.2,  
+             R2.1 = 0.7,
+             Tbar = 0.5,
+             numCovar.1 = 5,
+             nbar = 4, 
+             J = 50, 
+             rho = 0, 
+             long.table = TRUE)
 ```
 
-```{r}
-test_results_04 <- 
-pum::pump_power_grid(design = c("d2.1_m2fr"),
-                     MTP = c("Holm", "BH") ,
-                     MDES = c(0.125, 0.12, 0.1, 0.23, 0.12),
-                     M = 5 ,
-                     J = 20,
-                     K = 1,
-                     nbar = 100,
-                     Tbar = 0.5 ,
-                     alpha = 0.05,
-                     numCovar.1 = 0,
-                     numCovar.2 = 0,
-                     numCovar.3 = 0,
-                     R2.1 = c(0.2, 0.2, 0.2, 0.2, 0.2),
-                     R2.2 = NULL,
-                     R2.3 = NULL,
-                     ICC.2 =0,
-                     ICC.3 = NULL,
-                     rho = 0.5,
-                     omega.2 = NULL,
-                     omega.3 = NULL)
-```
 
 ```{r}
-View(test_results_04)
+View(test_results_01_non_grid_long)
 ```
+
+
+
+<!-- ```{r} -->
+<!-- test_results_02 <-  -->
+<!-- pum::pump_power_grid(design = c("d2.1_m2fr", "d2.1_m2ff"), -->
+<!--                      MTP = c("Holm", "BH") , -->
+<!--                      MDES = c(0.125, 0.1, 0.2, 0.15, 0.175), -->
+<!--                      M = 5 , -->
+<!--                      J = 20, -->
+<!--                      K = 1, -->
+<!--                      nbar = 100, -->
+<!--                      Tbar = 0.5 , -->
+<!--                      alpha = 0.05, -->
+<!--                      numCovar.1 = 0, -->
+<!--                      numCovar.2 = 0, -->
+<!--                      numCovar.3 = 0, -->
+<!--                      R2.1 = c(0.2, 0.2, 0.2, 0.2, 0.2), -->
+<!--                      R2.2 = NULL, -->
+<!--                      R2.3 = NULL, -->
+<!--                      ICC.2 =0, -->
+<!--                      ICC.3 = NULL, -->
+<!--                      rho = 0.5, -->
+<!--                      omega.2 = NULL, -->
+<!--                      omega.3 = NULL) -->
+<!-- ``` -->
+
+<!-- ```{r} -->
+<!-- test_results_03 <-  -->
+<!-- pum::pump_power_grid(design = c("d2.1_m2fr"), -->
+<!--                      MTP = c("Holm", "BH") , -->
+<!--                      MDES = c(0.125), -->
+<!--                      M = 5 , -->
+<!--                      J = 20, -->
+<!--                      K = 1, -->
+<!--                      nbar = 100, -->
+<!--                      Tbar = 0.5 , -->
+<!--                      alpha = 0.05, -->
+<!--                      numCovar.1 = 0, -->
+<!--                      numCovar.2 = 0, -->
+<!--                      numCovar.3 = 0, -->
+<!--                      R2.1 = c(0.2, 0.2, 0.2, 0.2, 0.2), -->
+<!--                      R2.2 = NULL, -->
+<!--                      R2.3 = NULL, -->
+<!--                      ICC.2 =0, -->
+<!--                      ICC.3 = NULL, -->
+<!--                      rho = 0.5, -->
+<!--                      omega.2 = NULL, -->
+<!--                      omega.3 = NULL) -->
+<!-- ``` -->
+
+<!-- ```{r} -->
+<!-- View(test_results_03) -->
+<!-- ``` -->
+
+<!-- ```{r} -->
+<!-- test_results_04 <-  -->
+<!-- pum::pump_power_grid(design = c("d2.1_m2fr"), -->
+<!--                      MTP = c("Holm", "BH") , -->
+<!--                      MDES = c(0.125, 0.12, 0.1, 0.23, 0.12), -->
+<!--                      M = 5 , -->
+<!--                      J = 20, -->
+<!--                      K = 1, -->
+<!--                      nbar = 100, -->
+<!--                      Tbar = 0.5 , -->
+<!--                      alpha = 0.05, -->
+<!--                      numCovar.1 = 0, -->
+<!--                      numCovar.2 = 0, -->
+<!--                      numCovar.3 = 0, -->
+<!--                      R2.1 = c(0.2, 0.2, 0.2, 0.2, 0.2), -->
+<!--                      R2.2 = NULL, -->
+<!--                      R2.3 = NULL, -->
+<!--                      ICC.2 =0, -->
+<!--                      ICC.3 = NULL, -->
+<!--                      rho = 0.5, -->
+<!--                      omega.2 = NULL, -->
+<!--                      omega.3 = NULL) -->
+<!-- ``` -->
+
+<!-- ```{r} -->
+<!-- View(test_results_04) -->
+<!-- ``` -->
+
+
 
