--- a/PowerGridTesting.Rmd
+++ b/PowerGridTesting.Rmd
@@ -89,7 +89,7 @@ View(test_results_01_grid_wide)
 test_results_01_grid_long <- 
 pum::pump_power_grid(design = c("d2.1_m2fr"),
                      MTP = c("Holm") ,
-                     MDES = c(0.125, 0.2),
+                     MDES = c(0.125),
                      M = 5 ,
                      J = 20,
                      K = 1,
@@ -99,7 +99,7 @@ pum::pump_power_grid(design = c("d2.1_m2fr"),
                      numCovar.1 = 0,
                      numCovar.2 = 0,
                      numCovar.3 = 0,
-                     R2.1 = c(0.2),
+                     R2.1 = c(0.2, 0.3),
                      R2.2 = NULL,
                      R2.3 = NULL,
                      ICC.2 =0,
