--- a/project_tracker.Rmd
+++ b/project_tracker.Rmd
@@ -6,8 +6,9 @@ This list is not complete - to be added to and checked off by everyone.
 - Expand models (e.g. D3 designs with ICC non zero, and others discussed) & validate (Kristen, TBD)
     Done this (in particular the ICC stuff) except for additional models, to be postponed.
     TO DO: Add the d1.1_mcc model (simple randomization)
+    Done!
 - Run additional validation for extreme values (Kristen, TBD)
-    Near done.
+    Done.
 - Update with new naming convention (Kristen)
     Done!
 - Complete code commenting (Kristen, TBD)
@@ -17,24 +18,22 @@ This list is not complete - to be added to and checked off by everyone.
 - Source code completed, ASCII files, with formatted help files and be packaged for easy installation. 
     Still to do.
 - Submit package to CRAN - including JSS submission as vignettes in the package. 
-- Make sure all functions still work when specifying one outcome (Kristen, TBD)
-- Check for cluster RCT (using simulation?) whether correlation between test statistics is still equiv to correlation between outcomes (assuming constant values of R2 across outcomes) (Kristen, TBD)
-- Potentially use simulations to estimate rho matrix for users when entering other information about data - corr between outcomes, R2's (Kristen, maybe, TBD)
-- Revisit terminology of MDES - should we use "effect size" or "ATE" instead - build into user testing (Kristin, TBD)
+- Make sure all functions still work when specifying one outcome (Kristen)
+     Done      
 
 ## Kristen's todo list
 - document remaining issues with sample size/mdes code, implement correct level of warnings
 - once sample size code is stable, rerun all validation
-- should omega be a vector? check consistency of all scalar and vector params
+- should omega be a vector? check consistency of all scalar and vector params - single or vector for all
 - understand unit test with correlated outcomes
 
 # Shiny app
 - Aim to have draft to share in next meeting
+- Talk to Zarni about ability to do simple git pulls for updates
 
 # Manuscript
-- Complete draft (Team, 9/30)
-- Get reviewer comments (Chuck, 10/15) - may drop entirely
-- Revised draft (Team, 10/31)
+- Complete draft (Team, 10/31)
+- Internal review and revisions (Team, 11/30)
 
 # Video
 - Reach out to video staff with plans and questions (Zarni, 7/31)
@@ -46,6 +45,7 @@ This list is not complete - to be added to and checked off by everyone.
 # Next check-in
 
 # Stretch goals
+- Potentially use simulations to estimate rho matrix for users when entering other information about data - corr between outcomes, R2's (Kristen, maybe, TBD)
 - tool that helps user build a block matrix of correlations based on a list of correlations between outcomes
 - tool the helps user determine correlation between test statistics using simulation
 - resolve terminology: MDES, ES, ATE_ES, impact?
